# decision-structure-compiler

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  HACKATHON.md  README.md  dsc.spec  pyproject.toml
.claude/skills/dsc-analyze/: SKILL.md
.claude/skills/dsc-compile/: SKILL.md
.claude/skills/dsc-run/: SKILL.md
docs/: generate_demo_gif.py
examples/content_moderation/: compiled_artifact.json  demo.py
examples/customer_support/: compiled_artifact.json  demo.py
examples/customer_support/traces/: general_inquiry.json  refund_denied.json  refund_happy_path.json  vip_refund.json
examples/full_pipeline/: demo.py
examples/programmatic_api/: build_and_run.py
openclaw/: README.md  setup.sh
openclaw/plugin/: openclaw.plugin.json  package.json  tsconfig.json
openclaw/plugin/src/: evaluator.ts  index.ts  loader.ts
openclaw/skill/: SKILL.md
scripts/: build.py
src/dsc/: __init__.py
src/dsc/analyzer/: __init__.py  bridge.py  cost_estimator.py  exporter.py  log_analyzer.py  report.py  static_analyzer.py
src/dsc/cli/: __init__.py  entry.py  main.py
src/dsc/compiler/: __init__.py  compiler.py
src/dsc/graph_extractor/: __init__.py  extractor.py
src/dsc/graph_optimizer/: __init__.py  optimizer.py
src/dsc/llm/: __init__.py  client.py  prompts.py
src/dsc/models/: __init__.py  conditions.py  graph.py  project.py  scenario.py  trace.py
tests/: conftest.py  test_analyzer.py  test_compiler.py  test_evaluator.py  test_graph_extractor.py  test_graph_optimizer.py  test_models.py  test_runtime.py  test_scenario_manager.py  test_trace_collector.py
(+10 files in other folders)
