[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsc"
version = "0.1.0"
description = "Decision Structure Compiler — compile LLM reasoning into deterministic decision graphs"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
    "networkx>=3.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dsc = "dsc.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dsc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
